test/fails/bad_tags/decl3.lgl
tag a is vec2->vec2; // Cannot tag matrices